# dify-sqlserver-tool

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements-dev.txt  setup.py
dify_sqlserver_tool/: __init__.py  manifest.json  sql_server_tool.py  tool.py
tests/: run_tests.py  test_sql_server.py
tools/: sql_server_tool.py
