[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-sqlserver-tool"
version = "0.1.0"
description = "A SQL Server tool for Dify"
readme = "README.md"
authors = [{ name = "Way-Zxw", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "pyodbc>=4.0.39",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Way-Zxw/dify-sqlserver-tool"
Repository = "https://github.com/Way-Zxw/dify-sqlserver-tool.git" 